[tool.poetry]
name = "aoc"
description = "Advent of code"
version = "0.1.0"
authors = ["Piotr Wysocki <wysocki.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
more-itertools = "^8.6.0"
pydantic = "^1.7.3"
typer = "^0.3.2"
Expression = "^0.43.0"
clipboard = "^0.0.4"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docformatter = "^1.3.1"
mypy = "^0.790"
isort = "^5.6.4"
flake8 = "^3.8.4"
black = "^20.8b1"
codecov = "^2.1.11"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[tool.black]
line-length=88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "src/aoc",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src/aoc"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc = "src.aoc:cli"
